--- a/src/app/attraction/attraction.page.scss
+++ b/src/app/attraction/attraction.page.scss
@@ -8,25 +8,43 @@
     color: #fff;
   }
   
-  ion-header,
-  ion-toolbar {
-    --ion-toolbar-background: #000 !important;
-    
-  
-    ion-title {
-      color: #97C93C;
-     text-align: left;
-     padding-left: 35px;
-      font-size: 20px;
-    }
-  
-    ion-icon {
-      font-size: 30px;
-      color: #fff;
-      filter: drop-shadow(0 0 2px #0f0);
-      padding-right: 10px;
-    }
+ion-header,
+ion-toolbar {
+  --ion-toolbar-background: #000 !important;
+  color: #fff !important;
+
+  ion-title {
+    color: #97C93C;
+    font-size: 20px;
+    padding-left: 8px; 
+    text-align: left;
   }
+
+  ion-icon {
+    color: #fff !important;
+    font-size: 26px;
+    filter: drop-shadow(0 0 2px #0f0);
+  }
+}
+.toolbar-left {
+  display: flex;
+  align-items: center;
+
+  ion-button {
+    --padding-start: 0;
+    --padding-end: 0;
+    margin-right: 8px;
+  }
+
+  .page-title {
+    color: #97C93C;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 0 auto;
+  }
+}
+
+
   
   .attractions-content {
     --background: #000;
@@ -34,9 +52,11 @@
     border-top-right-radius: 55px;
     padding: 20px;
     top: 10%;
+    height: 100%;
   
     .attractions-wrapper {
       padding: 15px;
+      margin-bottom: 130px;
   
       .attractions-title {
         text-align: center;
