--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -130,6 +130,11 @@
       <ion-icon name="map-outline" class="caro-icon"></ion-icon>
       <p>Attractions </p>
     </ion-card>
+   <ion-card class="card" (click)="navigate('/home/accommodation')">
+  <ion-icon name="bed-outline" class="caro-icon"></ion-icon>
+  <p>Accommodation</p>
+</ion-card>
+
     <ion-card class="card" (click)="openPdfPage(eventDetails.venue_layout,'venue-layout')">
       <ion-icon name="business-outline" class="caro-icon"></ion-icon>
       <p>Venue Layout</p>
