--- a/src/app/app-help/help.page.scss
+++ b/src/app/app-help/help.page.scss
@@ -8,26 +8,73 @@
   color: #fff;
 }
 
+
 ion-header,
 ion-toolbar {
   --ion-toolbar-background: #000 !important;
+  color: #fff !important;
 
   ion-title {
     color: #97C93C;
-    text-align: left;
-    padding-left: 35px;
     font-size: 20px;
-    
+    padding-left: 8px; 
+    text-align: left;
   }
 
   ion-icon {
-    font-size: 30px;
-    color: #fff;
+    color: #fff !important;
+    font-size: 26px;
     filter: drop-shadow(0 0 2px #0f0);
-    padding-right: 10px;
+  }
+}
+.toolbar-left {
+  display: flex;
+  align-items: center;
+
+  ion-button {
+    --padding-start: 0;
+    --padding-end: 0;
+    margin-right: 8px;
+  }
+
+  .page-title {
+    color: #97C93C;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 0 auto;
   }
 }
 
+.notification-wrapper {
+  position: relative;
+  cursor: pointer;
+  padding-right: 10px;
+
+  ion-icon {
+    font-size: 26px;
+    color: #fff;
+    filter: drop-shadow(0 0 2px #0f0);
+  }
+
+  .badge {
+    position: absolute;
+    top: -4px;
+    right: 5px;
+    background: red;
+    color: white;
+    font-size: 0.7rem;
+    font-weight: bold;
+    padding: 2px 5px;
+    border-radius: 10px;
+    min-width: 16px;
+    text-align: center;
+    box-shadow: 0 0 4px rgba(255, 0, 0, 0.8);
+  }
+}
+
+  ion-content::part(background) {
+  display: none !important;
+}
 .app-page {
   padding: 20px;
   padding-bottom: 80px;
@@ -35,8 +82,12 @@ ion-toolbar {
   .intro-section {
     position: relative;
     width: 100%;
-    height: 200px;
-    border-radius: 20px;
+    height: 130px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    background-color: rgb(26, 23, 23);
+    border-top-left-radius: 30px;
+    border-bottom-right-radius: 30px;
     overflow: hidden;
     margin-bottom: 20px;
   //   box-shadow: 0 0 12px #8aff00;
@@ -57,14 +108,12 @@ ion-toolbar {
       height: 100%;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
       text-align: center;
       padding: 0 20px;
       h1 {
         font-size: 1.8rem;
         color: #8aff00;
-        margin-bottom: 40px;
         text-shadow: 0 0 5px #8aff00;
         animation: fadeInUp 1s ease-out;
       }
@@ -84,11 +133,11 @@ ion-toolbar {
     backdrop-filter: blur(16px);
     border-top-left-radius: 55px;
     border-top-right-radius: 55px;
-    height: 75vh;
+    height: 100%;
     overflow: auto;
     padding: 24px;
     animation: fadeInUp 1.4s ease-out;
-    box-shadow: 0 0 12px #8aff00;
+    // box-shadow: 0 0 12px #8aff00;
     h2 {
       font-size: 1.5rem;
       color: #c4f715;
@@ -104,7 +153,13 @@ ion-toolbar {
       margin-bottom: 20px;
       color: #dddddd;
     }
-
+.app-para { 
+      font-size: 0.95rem;
+      line-height: 1.6;
+      margin-bottom: 20px;
+      color: #dddddd;
+      text-align: left;
+    }
     h3 {
       font-size: 1.2rem;
       margin-top: 24px;
@@ -124,7 +179,18 @@ ion-toolbar {
         color: #e4e4e4;
       }
     }
+    
   }
+}
+
+:host ::ng-deep .app-para h3 {
+  font-size: 1.2rem;
+  margin-top: 24px;
+  margin-bottom: 10px;
+  color: #ffffff;
+  border-left: 4px solid #8aff00;
+  padding-left: 10px;
+  text-shadow: 0 0 4px #6f0;
 }
 
 // Bottom Tab Bar
