--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,4 +21,8 @@
     <ion-icon name="person-outline"></ion-icon>
     <span>Profile</span>
   </div>
+  <div class="tab-button" (click)="router.navigate(['/home/notification'])">
+    <ion-icon name="notifications-outline"></ion-icon>
+    <span>Notification</span>
+  </div>
 </div>
