--- a/src/app/schedule/schedule.page.scss
+++ b/src/app/schedule/schedule.page.scss
@@ -8,24 +8,69 @@
     background-attachment: fixed;
   }
   
-  ion-header,
-  ion-toolbar {
-    color: #fff !important;
   
-    ion-title {
-      color: #97C93C;
-      text-align: left;
-      font-size: 20px;
-      padding-left: 30px;
-    }
-  
-    ion-icon {
-      color: #fff !important;
-      font-size: 26px;
-      padding-right: 10px;
-      filter: drop-shadow(0 0 2px #0f0);
-    }
+ion-header,
+ion-toolbar {
+  --ion-toolbar-background: #000 !important;
+  color: #fff !important;
+
+  ion-title {
+    color: #97C93C;
+    font-size: 20px;
+    padding-left: 8px; 
+    text-align: left;
   }
+
+  ion-icon {
+    color: #fff !important;
+    font-size: 26px;
+    filter: drop-shadow(0 0 2px #0f0);
+  }
+}
+.toolbar-left {
+  display: flex;
+  align-items: center;
+
+  ion-button {
+    --padding-start: 0;
+    --padding-end: 0;
+    margin-right: 8px;
+  }
+
+  .page-title {
+    color: #97C93C;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 0 auto;
+  }
+}
+
+.notification-wrapper {
+  position: relative;
+  cursor: pointer;
+  padding-right: 10px;
+
+  ion-icon {
+    font-size: 26px;
+    color: #fff;
+    filter: drop-shadow(0 0 2px #0f0);
+  }
+
+  .badge {
+    position: absolute;
+    top: -4px;
+    right: 5px;
+    background: red;
+    color: white;
+    font-size: 0.7rem;
+    font-weight: bold;
+    padding: 2px 5px;
+    border-radius: 10px;
+    min-width: 16px;
+    text-align: center;
+    box-shadow: 0 0 4px rgba(255, 0, 0, 0.8);
+  }
+}
   
   .scientific-content {
     --background: #000000;
@@ -110,8 +155,9 @@
   
   .schedule-container {
     padding: 15px;
-    height: 50vh;
+    height: 100%;
     overflow: auto;
+    
   
     .time-block {
       display: flex;
